feat: use json raw for user, ignore on swagger
